# mini_raycaster

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
gfx/levels/: level_1
gfx/maps/: level_1.txt
include/: engine.h  parser.h  raycaster.h
src/: main.c
src/engine/: color.c  engine.mk  movement.c  render.c
src/parser/: load_textures.c  parser.c  parser.mk
src/sdl/: cleanup.c  init.c  loop.c  sdl.mk
